Save window state before hiding everything

This fixes bug 473967 introduced in 56f801118c, however the docker size
not preserved on krita restart is reintroduced.

BUG:473967